--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" title="Il sito di Chicchi7393">
     <title>Chicchi7393</title>
     <meta name="viewport" content="initial-scale=1.0, width=initial-width">
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
