Reso più accurato

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <details id="friends">
         <summary>Amici</summary>
         <ul>
-          <li><a href="http://s7uck.github.io">StuckDuck</a></li> <!-- spero -->
+          <li>Test 1</li>
           <li>Test 2</li>
           <li>Test 3</li>
           <li>Test 4</li>
